fixing grid spacing

--- a/src/components/_contact/style.scss
+++ b/src/components/_contact/style.scss
@@ -10,23 +10,29 @@
   grid-template-areas:
     ". contactblock . .";
   grid-template-columns: 0 12fr 0;
+  grid-column-gap: 40px;
   width: 100vw;
 
   @media #{$tablet} {
-    grid-template-columns: 1fr minmax(min-content, 460px) minmax(min-content, 460px) 1fr;
+    grid-template-columns: 1fr minmax(min-content, 450px) minmax(min-content, 450px) 1fr;
     grid-column-gap: 20px;
+  }
+
+  @media #{$desktop} {
+    grid-template-columns: 1fr minmax(min-content, 520px) minmax(min-content, 520px) 1fr;
+    grid-column-gap: 40px;
   }
 
   @media #{$desktopxl} {
     grid-template-columns: 1fr minmax(min-content, 560px) minmax(min-content, 560px) 1fr;
-    grid-column-gap: 40px;
+
   }
 
 }
 
 .contact-block {
   grid-area: contactblock;
-  padding: 40px;
+  padding: 40px 0;
 
   .contact-block-title {
     margin-bottom: 8px;
@@ -42,12 +48,12 @@
     column-count: 4;
   }
 
-  @media #{$tablet} {
-    padding: 60px 20px 80px 20px;
+  @media #{$desktop} {
+    padding: 60px 0;
   }
 
   @media #{$desktopxl} {
-    padding: 60px 0 80px 0;
+    padding: 80px 0;
   }
 
   .list-item-icon {
