--- a/src/components/post/style.scss
+++ b/src/components/post/style.scss
@@ -4,7 +4,6 @@
 
 .post {
   width: 100%;
-  z-index: 1;
 }
 
 .post-title {
@@ -15,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--color-white);
   box-shadow: 0px 0px 12px 0px rgba(237,237,237,1);
   padding: 50px;
   margin-bottom: 20px;
